--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   app:
     build: .
     environment:
+      SERVER_PORT: 8081
       DB_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE:-cokothon}?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
       DB_USERNAME: root
       DB_PASSWORD: ${MYSQL_ROOT_PASSWORD:-password}
