--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,20 +34,17 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Grant execute permission for gradlew
-        working-directory: backend
-        run: chmod +x gradlew
+        run: chmod +x backend/gradlew
 
       - name: Build with Gradle
-        working-directory: backend
-        run: ./gradlew clean bootJar
+        run: cd backend && ./gradlew clean bootJar
 
       - name: Prepare deployment files
-        working-directory: backend
         run: |
-          mkdir -p ../deploy
-          cp build/libs/*.jar ../deploy/app.jar
-          cp docker-compose.yml ../deploy/
-          cp Dockerfile ../deploy/
+          mkdir -p deploy
+          cp backend/build/libs/*.jar deploy/app.jar
+          cp backend/docker-compose.yml deploy/
+          cp backend/Dockerfile deploy/
 
       - name: Configure SSH
         env:
