--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 env:
-  EC2_HOST: 3.27.200.82
+  EC2_HOST: ${{ secrets.EC2_HOST }}
   EC2_USER: ec2-user
   APP_DIR: /home/ec2-user/backend
 
